--- a/src/scss/card-grid.scss
+++ b/src/scss/card-grid.scss
@@ -1,20 +1,26 @@
 .card-grid {
     display: grid;
-    grid-template-columns: 33% 33% 33%;
-    grid-gap: 15px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+    // margin: 20px;
     // background-color: $green;
-    padding: 20px;
+    // padding: 20px;
+    max-width: 98%;
+    align-self: center;
 }
 .card {
     display: inline-block;
-    grid-column: 1fr;
-    grid-row: 1fr;
+    // grid-column: 1fr;
+    // grid-row: 1fr;
     padding: 10px;
     width: 95%;
     border-radius: 5px;
+    margin: 10px;
     background-color: $yellow-green;
     border: 2px solid $brown;
     filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.5));
+    display: flex;
+    flex-wrap: wrap;
 
     img {
         object-fit: cover;
@@ -32,7 +38,8 @@
         background-color: white;
         border-radius: 5px;
         filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.5));
-        align-self: center;
+        justify-content: center;
+        display: flex;
         color: black;
         margin-bottom: 20px;
 
